--- a/src/main/resources/org/example/peliculas/añadirPelicula.fxml
+++ b/src/main/resources/org/example/peliculas/añadirPelicula.fxml
@@ -1,8 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.peliculas.AñadirPelicula">
-
-</AnchorPane>
+<BorderPane prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.peliculas.HelloController">
+    <left>
+        <Pane prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #723e4e;" stylesheets="@../../../css/Style1.css" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="82.0" layoutY="60.0" text="Añadir película" textFill="WHITE">
+               <font>
+                  <Font name="Bodoni MT Bold" size="28.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnRegresar" layoutX="125.0" layoutY="297.0" mnemonicParsing="false" text="Regresar" />
+         </children>
+        </Pane>
+    </left>
+    <center>
+        <AnchorPane fx:id="contenedorCentral" layoutX="183.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="211.0" layoutY="44.0" text="Ingresa:">
+               <font>
+                  <Font name="Bodoni MT Bold" size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="166.0" layoutY="98.0" text="Título:" />
+            <Label layoutX="170.0" layoutY="160.0" text="Año:" />
+            <Label layoutX="136.0" layoutY="282.0" text="Clasificación:" />
+            <Label layoutX="161.0" layoutY="226.0" text="Género:" />
+            <TextField fx:id="txtAñadirTitulo" layoutX="211.0" layoutY="94.0" />
+            <TextField fx:id="txtAñadirAño" layoutX="211.0" layoutY="156.0" />
+            <TextField fx:id="txtAñadirGenero" layoutX="211.0" layoutY="222.0" />
+            <TextField fx:id="txtAñadirClasificacion" layoutX="216.0" layoutY="278.0" />
+            <Button layoutX="183.0" layoutY="345.0" mnemonicParsing="false" text="Añadir película" />
+         </children></AnchorPane>
+    </center>
+</BorderPane>
