--- a/src/main/resources/org/example/peliculas/eliminar.fxml
+++ b/src/main/resources/org/example/peliculas/eliminar.fxml
@@ -1,14 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
+<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.peliculas.Eliminar"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="741.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane layoutX="-2.0" prefHeight="400.0" prefWidth="234.0" style="-fx-background-color: #723e4e;">
+         <children>
+            <Button layoutX="78.0" layoutY="336.0" mnemonicParsing="false" text="Regresar" />
+            <Label layoutX="29.0" layoutY="50.0" text="PELICULAS" textFill="WHITE">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <TextField layoutX="266.0" layoutY="78.0" prefHeight="31.0" prefWidth="87.0" text="Minecraft" />
+      <TextField layoutX="266.0" layoutY="144.0" prefHeight="31.0" prefWidth="87.0" text="Coraline" />
+      <TextField layoutX="266.0" layoutY="214.0" prefHeight="31.0" prefWidth="87.0" text="Superman" />
+      <TextField layoutX="266.0" layoutY="285.0" prefHeight="31.0" prefWidth="87.0" text="Batman" />
+      <TextField layoutX="372.0" layoutY="78.0" prefHeight="31.0" prefWidth="87.0" text="4/Abril/25" />
+      <TextField layoutX="480.0" layoutY="78.0" prefHeight="31.0" prefWidth="93.0" text="Comedia" />
+      <TextField layoutX="595.0" layoutY="78.0" prefHeight="31.0" prefWidth="113.0" text="PG" />
+      <TextField layoutX="373.0" layoutY="144.0" prefHeight="31.0" prefWidth="87.0" text="6/Feb/09" />
+      <TextField layoutX="483.0" layoutY="144.0" prefHeight="31.0" prefWidth="93.0" text="Animacion" />
+      <TextField layoutX="595.0" layoutY="144.0" prefHeight="31.0" prefWidth="113.0" text="PG" />
+      <Label layoutX="279.0" layoutY="37.0" text="NOMBRE" />
+      <Label layoutX="399.0" layoutY="37.0" text="AÑO" />
+      <Label layoutX="490.0" layoutY="37.0" text="GENERO" />
+      <Label layoutX="599.0" layoutY="37.0" text="CLASIFICACION" />
+      <TextField layoutX="373.0" layoutY="214.0" prefHeight="31.0" prefWidth="87.0" text="11/Jul/25" />
+      <TextField layoutX="483.0" layoutY="214.0" prefHeight="31.0" prefWidth="93.0" text="Superhero" />
+      <TextField layoutX="595.0" layoutY="214.0" prefHeight="31.0" prefWidth="113.0" text="PG-13" />
+      <TextField layoutX="373.0" layoutY="285.0" prefHeight="31.0" prefWidth="87.0" text="4/Marzo/22" />
+      <TextField layoutX="483.0" layoutY="285.0" prefHeight="31.0" prefWidth="93.0" text="Superhero" />
+      <TextField layoutX="595.0" layoutY="285.0" prefHeight="31.0" prefWidth="113.0" text="PG-13" />
+   </children>
 </AnchorPane>
