--- a/src/main/resources/org/example/peliculas/listaPeliculas.fxml
+++ b/src/main/resources/org/example/peliculas/listaPeliculas.fxml
@@ -1,14 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
+<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.peliculas.ListaPeliculas"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane fx:id="listaPeliculas" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="381.0" prefWidth="741.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane prefHeight="381.0" prefWidth="234.0" style="-fx-background-color: #723e4e;">
+         <children>
+            <Button layoutX="72.0" layoutY="327.0" mnemonicParsing="false" text="Regresar" />
+            <Label layoutX="30.0" layoutY="38.0" text="PELICULAS" textFill="WHITE">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <Label layoutX="289.0" layoutY="40.0" text="NOMBRE" />
+      <Label layoutX="399.0" layoutY="40.0" text="AÑO" />
+      <Label layoutX="489.0" layoutY="40.0" text="GENERO" />
+      <Label layoutX="588.0" layoutY="40.0" text="CLASIFICACION" />
+      <TextField layoutX="277.0" layoutY="73.0" prefHeight="31.0" prefWidth="87.0" text="Minecraft" />
+      <TextField layoutX="379.0" layoutY="73.0" prefHeight="31.0" prefWidth="87.0" text="4/Abril/25" />
+      <TextField layoutX="481.0" layoutY="73.0" prefHeight="31.0" prefWidth="93.0" text="Comedia" />
+      <TextField layoutX="588.0" layoutY="73.0" prefHeight="31.0" prefWidth="113.0" text="PG" />
+      <TextField layoutX="277.0" layoutY="132.0" prefHeight="31.0" prefWidth="87.0" text="Coraline" />
+      <TextField layoutX="379.0" layoutY="132.0" prefHeight="31.0" prefWidth="87.0" text="6/Feb/09" />
+      <TextField layoutX="484.0" layoutY="132.0" prefHeight="31.0" prefWidth="93.0" text="Animacion" />
+      <TextField layoutX="588.0" layoutY="132.0" prefHeight="31.0" prefWidth="113.0" text="PG" />
+      <TextField layoutX="277.0" layoutY="194.0" prefHeight="31.0" prefWidth="87.0" text="Superman" />
+      <TextField layoutX="379.0" layoutY="194.0" prefHeight="31.0" prefWidth="87.0" text="11/Jul/25" />
+      <TextField layoutX="484.0" layoutY="194.0" prefHeight="31.0" prefWidth="93.0" text="Superheroe" />
+      <TextField layoutX="588.0" layoutY="194.0" prefHeight="31.0" prefWidth="113.0" text="PG-13" />
+      <TextField layoutX="277.0" layoutY="255.0" prefHeight="31.0" prefWidth="87.0" text="Batman" />
+      <TextField layoutX="379.0" layoutY="255.0" prefHeight="31.0" prefWidth="87.0" text="4/Marzo/22" />
+      <TextField layoutX="484.0" layoutY="255.0" prefHeight="31.0" prefWidth="93.0" text="Superhero" />
+      <TextField layoutX="588.0" layoutY="255.0" prefHeight="31.0" prefWidth="113.0" text="PG-13" />
+   </children>
 </AnchorPane>
